k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
  namespace: ott
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: netflix
          image: saurav547/netflix-app
          ports:
            - containerPort: 3000
