k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: ott
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000        # Service port inside the cluster
    targetPort: 3000   # Port on the nginx container
    nodePort: 30001  # Port accessible outside the cluster (must be in range 30000-32767)
  type: NodePort
