k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  namespace: ott
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Force HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Use Let's Encrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - netflix.90daysofdevops.xyz
    secretName: netflix-tls-secret  # Cert-Manager will manage this
  rules:
  - host: netflix.90daysofdevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-service
            port:
              number: 3000
